wk_taa_taaqa/src/objects/AMS_User_Licenses__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMS User Licenses</relationshipLabel>
        <relationshipName>AMS_User_Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Beginning_Date__c</fullName>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMS User Licenses</label>
    <nameField>
        <label>AMS User Licenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMS User Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>